--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "testMMM"
+name = "Toolbox_hello"
 version = "0.1.0"
 description = ""
 authors = ["WEI <w.pan@silence-theraptic.com>"]
