--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["WEI <w.pan@silence-theraptic.com>"]
 packages = [
     { include = "BioInfoToolBox/hello", from = "toolbox" }
 ]
+exclude = "/dist"
 
 [tool.poetry.dependencies]
 python = "^3.8"
