--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "Toolbox_hello"
 version = "0.1.0"
 description = ""
-authors = ["WEI <w.pan@silence-theraptic.com>"]
+authors = ["WEI <n124080@gmail.com>"]
 packages = [
     { include = "BioInfoToolBox/hello", from = "toolbox" }
 ]
